# burn-memory-experiments

./: README.md
burn_impl/: Cargo.toml
burn_impl/src/: bench.rs  lib.rs  main.rs  mlp.rs  softmax.rs
pytorch_impl/: .gitignore  bench.py  main.py  mlp.py  softmax.py
